tests/fail/object_set_property_non_object.lum
x = 10
x.name = "sam"
